--- a/app/globals.css
+++ b/app/globals.css
@@ -1,7 +1,14 @@
+@import url('https://fonts.googleapis.com/css2?family=Dancing+Script:wght@700&display=swap');
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
 
+
+
+.dancing-script-font {
+  font-family: "Dancing Script", cursive;
+  font-weight: 700;
+}
 @layer base {
   body{
     background: black;
