--- a/app/globals.css
+++ b/app/globals.css
@@ -17,9 +17,21 @@ backdrop-filter: blur( 10px );
 border-radius: 10px;
 border: 1px solid rgba( 255, 255, 255, 0.18 );
 }
+.black-outline-text {
+  text-shadow: -1px -1px 0 #000, 1px -1px 0 #000, -1px 1px 0 #000,
+    1px 1px 0 #000;
+  /* -webkit-text-stroke: 1px black; Outline thickness and color */
+ /* Fill color */
+}
+@media (min-width: 1025px) {
+  .grid-cols-gt-1024 {
+    display: grid !important;
+    grid-template-columns: repeat(3, minmax(0, 1fr)) !important;
+  }
+}
 @layer base {
   body{
-    background: black;
+    background: "#4B352A";
   }
   :root {
     --background: 0 0% 100%;
@@ -92,4 +104,13 @@ border: 1px solid rgba( 255, 255, 255, 0.18 );
   body {
     @apply bg-background text-foreground;
   }
+}
+body,
+html {
+  scrollbar-width: none; /* Firefox */
+  -ms-overflow-style: none;  /* IE 10+ */
+}
+
+body::-webkit-scrollbar {
+  display: none; /* Chrome, Safari, Opera */
 }
